--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: luminapdf
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --workers=2 --threads=4 --timeout=120 app:app
+    startCommand: gunicorn --workers=1 --threads=2 --timeout=180 --max-requests=5 app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.1
@@ -11,6 +11,8 @@ services:
         value: 10000
       - key: PYTHONUNBUFFERED
         value: "true"
+      - key: MALLOC_TRIM_THRESHOLD_
+        value: "65536"
     plan: free
     branch: master
     buildFilter:
